--- a/index.html
+++ b/index.html
@@ -1,3 +1,27 @@
-<h1>Pagina de prueba de monster</h1>
-<p>Este es un ejemplo de la pagina web de monster</p>
-<p><img src= "https://i.imgur.com/NqKN4mv.mp4" /></p>
+<html>
+    <head>
+        <meta charset="UTF8">
+        <title> Super Blog </title>
+        <link rel="stylesheet" href="css/estilos.css" />
+    </head>
+    <body>
+        <div id="container">
+            <div id="cabecera">
+                <img id="logo" src="imagenes/rayo.png" />
+                HyperBlog
+                <span id="tagline">-Tu blog mas onito- </span>
+            </div>
+            <div id="post">
+        <h1> Solo piensa  </h1>
+        <p>Deja volar tu imaginación</p>
+        <p> <img src="imagenes/imaginacion.png" width="25%" /> </p>
+        <p>Hay que dejar saber fluir la imaginación, de hecho, es la mejor manera de poner en funcionamiento nuestro cerebro para poder asi desarrollar nuevas imagenes que nos ayuden a pensar o actuar dependiendo la situacion de cada uno. 
+            Todos pueden imaginar, muchas cosas por segundo, pero quien puede ponerlas a funcionar?
+        </p>
+            </div>
+            <div id="footer">
+                Hecho con amor e imaginacion
+     </div>            
+        
+    </body>
+</html>
