Personalizacion completa del sitio web

--- a/contact.html
+++ b/contact.html
@@ -22,18 +22,13 @@
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
-		<div id="selector-theme">
-			<div id="to-green"></div>
-			<div id="to-red"></div>
-			<div id="to-blue"></div>
-		</div>
 
 		<section id="global">
 
 			<!-- Cabecera -->
 			<header>
 				<div id="logo">
-					<h1>Proyecto JS</h1>
+					<h1>Hielo Kubito's</h1>
 				</div>
 
 				<div class="clearfix"></div>
@@ -42,7 +37,7 @@
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="reloj.html">Reloj</a></li>
-						<li><a href="about.html">Sobre mi</a></li>
+						<li><a href="about.html">Sobre nosotros</a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</nav>
@@ -70,6 +65,7 @@
 						<select name="sex" data-validation="required">
 							<option value="men">Hombre</option>
 							<option value="woman">Mujer</option>
+							<option value="otro">Otro</option>
 						</select>
 
 						<label for="date">Fecha de nacimiendo</label>
@@ -85,8 +81,8 @@
 
 				<aside id="sidebar">
 					<div id="about">
-						<h4><span>¿Quien soy?</span></h4>
-						<img src="img/caracol.jpg" />
+						<h4><span>Nosotros</span></h4>
+						<img src="img/presen.png" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet malesuada erat, ac ullamcorper justo.</p>
 					</div>
 
