--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8" />
-		<title>Proyecto con JavaScript</title>
+		<title>Hielo Kubitos</title>
 
 		<!-- Estilos CSS -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -23,18 +23,14 @@
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
-		<div id="selector-theme">
-			<div id="to-green"></div>
-			<div id="to-red"></div>
-			<div id="to-blue"></div>
-		</div>
+	
 
 		<section id="global">
 
 			<!-- Cabecera -->
 			<header>
 				<div id="logo">
-					<h1>Proyecto JS</h1>
+					<h1>Hielo Kubito's</h1>
 				</div>
 
 				<div class="clearfix"></div>
@@ -43,7 +39,7 @@
 					<ul>
 						<li><a href="index.html">Inicio</a></li>
 						<li><a href="reloj.html">Reloj</a></li>
-						<li><a href="about.html">Sobre mi</a></li>
+						<li><a href="about.html">Sobre nosotros</a></li>
 						<li><a href="contact.html">Contacto</a></li>
 					</ul>
 				</nav>
@@ -67,32 +63,11 @@
 
 				<aside id="sidebar">
 					<div id="about">
-						<h4><span>¿Quien soy?</span></h4>
-						<img src="img/caracol.jpg" />
+						<h4><span>¿Quienes somos?</span></h4>
+						<img src="img/presen.png" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet malesuada erat, ac ullamcorper justo.</p>
 					</div>
 
-					<div id="login">
-						<h4><span>Identificate</span></h4>
-						<form>
-							<label for="name">
-								Nombre
-							</label>
-							<input type="text" name="name" id="form_name"/>
-
-							<label for="email">
-								Correo
-							</label>
-							<input type="text" name="email" />
-
-							<label for="password">
-								Contraseña
-							</label>
-							<input type="password" name="password" />
-
-							<input type="submit" value="Entrar" />
-						</form>
-					</div>
 
 				</aside>
 
@@ -102,7 +77,7 @@
 		</section>
 
 		<footer>
-			Master de JavaScript
+			Derechos Reservados 2023
 
 			<a href="#" class="subir">Ir arriba</a>
 		</footer>
