--- a/reloj.html
+++ b/reloj.html
@@ -2,7 +2,7 @@
 <html lang="es">
 	<head>
 		<meta charset="utf-8" />
-		<title>Proyecto con JavaScript</title>
+		<title>Hielo Kubitos</title>
 
 		<!-- Estilos CSS -->
 		<link rel="stylesheet" type="text/css" href="css/styles.css" />
@@ -19,18 +19,13 @@
 		<script type="text/javascript" src="js/main.js"></script>
 	</head>
 	<body>
-		<div id="selector-theme">
-			<div id="to-green"></div>
-			<div id="to-red"></div>
-			<div id="to-blue"></div>
-		</div>
-
+		
 		<section id="global">
 
 			<!-- Cabecera -->
 			<header>
 				<div id="logo">
-					<h1>Proyecto JS</h1>
+					<h1>Hielo Kubito's</h1>
 				</div>
 
 				<div class="clearfix"></div>
@@ -57,31 +52,13 @@
 
 				<aside id="sidebar">
 					<div id="about">
-						<h4><span>¿Quien soy?</span></h4>
-						<img src="img/caracol.jpg" />
+						<h4><span>Nosotros</span></h4>
+						<img src="img/presen.png" />
 						<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam sit amet malesuada erat, ac ullamcorper justo.</p>
 					</div>
 
 					<div id="login">
-						<h4><span>Identificate</span></h4>
-						<form>
-							<label for="name">
-								Nombre
-							</label>
-							<input type="text" name="name" id="form_name"/>
-
-							<label for="email">
-								Correo
-							</label>
-							<input type="text" name="email" />
-
-							<label for="password">
-								Contraseña
-							</label>
-							<input type="password" name="password" />
-
-							<input type="submit" value="Entrar" />
-						</form>
+						
 					</div>
 
 				</aside>
@@ -92,7 +69,7 @@
 		</section>
 
 		<footer>
-			Master de JavaScript 
+			Derechos Reservados 2023 
 
 			<a href="#" class="subir">Ir arriba</a>
 		</footer>
