--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
             </div>
     <div id="post">
 
-        <h1> <u>Piensa en tu Bienestar mental</u> </h1>
+        <h1> <u>Piensa en tu Bienestar mental!</u> </h1>
 
         <p>La salud mental incluye nuestro bienestar emocional, psicológico y social. Afecta la forma en que pensamos, sentimos y actuamos cuando enfrentamos la vida. También ayuda a determinar cómo manejamos el estrés, nos relacionamos con los demás y tomamos decisiones.</p>
 
